Fix hero layout shift: lock navbar height to 64px, add matching hero padding-top

--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -8,6 +8,7 @@
   grid-template-columns: 44% 56%;
   grid-template-rows: 1fr auto;
   height: 100vh;
+  padding-top: 64px;
   background: #fcfcfc;
 }
 
