--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -64,6 +64,7 @@
   max-width: 1200px;
   margin: 0 auto;
   width: 100%;
+  height: 64px;
 }
 
 .navbar--scrolled .nav-inner { gap: 1.5rem; }
